@@ -3,9 +3,11 @@ Development history / change log, please read from bottom up
 Version 3.x.y - xx yyy 2021
 Generic changes/fixes
 	* update copyright 2021
+	* update dialog sizes to support uneven Windows scaling 
 	
 Device specific changes/fixes
 	* JetiAdapter - fix check GPS data to enable Google Earth export
+	* IGCAdapter - fix support configuring speed or others in KML/KMZ export
 
 Version 3.4.6 - 26 Dec 2020
 Generic changes/fixes
